# IA-Chart-Copilot

./: .gitignore  README.md  package.json
.github/workflows/: android.yml  release.yml
src/: app.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
